# DoramedAnalyzer

./: .env.example  .gitignore  BACKEND_INTEGRATION_GUIDE.md  Readme.MD  analyzer.py  config.py  main_test.py  pdf_extractor.py  pyproject.toml  test.py
core/: __init__.py  ai_usage.py  health_config.py  logging_utils.py  patterns.py  settings.py
models/: __init__.py  extraction.py
outputs/: final_integration_payload.cleaned.json  final_integration_payload.summary.json
parsers/: base.py  blood_pressure.py  body_composition.py  ecg.py  generic.py  oxygen.py
pipeline/: extraction_pipeline.py
prompts/: blood_pressure.py  body_composition.py  ecg.py  generic.py  oxygen.py
services/: __init__.py  document_classifier.py  health_analyzer.py  pdf_report_parser.py  report_validation.py
tests/: test_ai_usage.py  test_compatibility_imports.py  test_document_classifier.py  test_extraction_pipeline.py  test_parser_text_extraction.py  test_report_validation_service.py  test_settings.py  test_title_match.py  test_validators.py
validators/: __init__.py  medical_ranges.py  title_match.py
